--- a/res/layout/device_list_item.xml
+++ b/res/layout/device_list_item.xml
@@ -13,8 +13,7 @@
 	        android:layout_height="wrap_content"
 	        android:paddingLeft="5dp"
 	        android:text="@string/device_name"
-	        android:textSize="20dp"
-	        android:textColor="#fff"/>
+	        android:textSize="20dp"/>
 	    <TextView 
 	        android:id="@+id/isPairTV"
 	        android:layout_width="wrap_content"
