--- a/res/layout/page_bluetooth.xml
+++ b/res/layout/page_bluetooth.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <!-- 附近的人 -->
-    
+    <!-- 设置可见 -->
+
     <LinearLayout
-        android:id="@+id/searchFriend"
+        android:id="@+id/setDeviceVisibleBtn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -21,21 +21,49 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="20dp"
             android:contentDescription="@null"
-            android:src="@drawable/afd" />
+            android:src="@drawable/eye" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="20dp"
-            android:text="@string/people_closed"
+            android:text="@string/set_visible"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <!-- 搜索设备 -->
+
+    <LinearLayout
+        android:id="@+id/searchDeviceBtn"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/bg_click"
+        android:clickable="true"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:contentDescription="@null"
+            android:src="@drawable/radar" />
+
+        <TextView
+            android:id="@+id/searchBtnText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:text="@string/search_device"
             android:textSize="20sp" />
     </LinearLayout>
 
     <!-- 选择文件 -->
-    
+
     <LinearLayout
-        android:id="@+id/showFile"
+        android:id="@+id/cancelSearchBtn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/bg_click"
@@ -58,36 +86,13 @@
             android:text="@string/select_file"
             android:textSize="20sp" />
     </LinearLayout>
-    
-    <!-- 发送对象 -->
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:gravity="center_vertical"
-            android:text="@string/user_to_send"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/userToSend"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="20dp"
-            android:textSize="15sp" />
-    </LinearLayout>
 
     <!-- 待发送文件 -->
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/bg_white"
         android:orientation="horizontal" >
 
@@ -100,24 +105,24 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/fileToSend"
+            android:id="@+id/sendFileTV"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:gravity="center_vertical"
-            android:singleLine="true"
-            android:paddingRight="20dp"
             android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:singleLine="true"
             android:textSize="15sp" />
     </LinearLayout>
 
-    <!-- 发送列表 -->
-    
+    <!-- 设备列表 -->
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="20dp"
         android:gravity="center_vertical"
-        android:text="@string/list_send"
+        android:text="@string/device_list"
         android:textSize="20sp" />
 
     <LinearLayout
@@ -129,41 +134,12 @@
         android:orientation="vertical" >
 
         <ListView
-            android:id="@+id/lvSendMission"
+            android:id="@+id/deviceListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
         </ListView>
     </LinearLayout>
 
-    <!-- 开始发送 -->
-    
-    <LinearLayout
-        android:id="@+id/startSend"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/bg_click"
-        android:clickable="true"
-        android:orientation="horizontal" >
-
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="20dp"
-            android:contentDescription="@null"
-            android:src="@drawable/send" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="20dp"
-            android:text="@string/start_send"
-            android:textSize="20sp" />
-    </LinearLayout>
-
-
+   
 
 </LinearLayout>
