--- a/res/layout/item_load.xml
+++ b/res/layout/item_load.xml
@@ -8,6 +8,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:paddingLeft="5dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:layout_alignParentTop="true"
         android:src="@drawable/ic_tx" />
 
