修复 传单个文件2次，一次传输多个文件，暂停和继续

--- a/res/layout/item_load.xml
+++ b/res/layout/item_load.xml
@@ -31,9 +31,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="5dp"
+        android:layout_toLeftOf="@+id/btnButton"
         android:layout_toRightOf="@id/imageView1"
-        android:maxLength="25"
         android:singleLine="true"
+        android:ellipsize="end"
         android:text="文件名.txt" />
 
     <ProgressBar
