增加邮件发送验证码功能

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -51,6 +51,17 @@
             hyman:text_size="12sp"
             hyman:color="#ff45c01a" />
         
+        <com.scut.filetransfer.activity.ChangeColorIconWithText
+            android:id="@+id/user"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:padding="5dp"
+            hyman:icon="@drawable/ic_menu_cc_am"
+            hyman:text="@string/user"
+            hyman:text_size="12sp"
+            hyman:color="#ff45c01a" />
+        
 
     </LinearLayout>
 
